--- a/Bjj/Bjj.csproj
+++ b/Bjj/Bjj.csproj
@@ -9,6 +9,9 @@
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Views\Home\Index.cshtml" />
       <_ContentIncludedByDefault Remove="Views\Home\Privacy.cshtml" />
+      <_ContentIncludedByDefault Remove="BjjTests\BjjTests\obj\BjjTests.csproj.nuget.dgspec.json" />
+      <_ContentIncludedByDefault Remove="BjjTests\BjjTests\obj\project.assets.json" />
+      <_ContentIncludedByDefault Remove="BjjTests\BjjTests\obj\project.packagespec.json" />
     </ItemGroup>
 
     <ItemGroup>
@@ -20,6 +23,7 @@
       <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.2" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.2" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+      <PackageReference Include="xunit" Version="2.4.2" />
     </ItemGroup>
 
 </Project>
